# talaria

./: Cargo.toml  lorem_ipsum.txt  readme.md
data/: ADA-USD.csv  AMZN.csv  ATOM-USD-Binance.txt  ATOM-USD-Coinbase.txt  ATOM-USD-KuCoin.txt  Binance_ADAUSDT_minute.csv  Binance_XLMUSDT_minute.csv  PFE.csv  SHIB-USD.csv  XLM-USD-Binance.txt  XLM-USD-Coinbase.txt  XLM-USD-Kraken.txt  XLM-USD.csv
src/: atalanta.rs  description.rs  exchange.rs  local_env.rs  main.rs  market.rs  parse.rs  record.rs  talaria.rs  time_range.rs  traits.rs
src/exchanges/: binance.rs  coinbase.rs  kraken.rs  kucoin.rs  mod.rs
src/indicators/: mod.rs  rsi_indicator.rs
src/traders/: fast_stochastic_oscillator.rs  mod.rs  money_flow_index.rs  percentage_price_oscillator.rs  relative_strength_index.rs  slow_stochastic_oscillator.rs
src/traders/rsi/: mod.rs  rsi_trader.rs
src/utilities/: mod.rs  time_range.rs
