[package]
name = "talaria"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ta = "0.4.0"
csv = "1.1"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }
coinbase-pro-rs = "0.7.1"
chrono = "0.4"